--- a/src/css/Welcome.css
+++ b/src/css/Welcome.css
@@ -59,9 +59,10 @@ input[type="text"]{
     
 .coursesbutton{
     display: inline;
-    position: relative;
-    top: 300px;
- 
+    /* position: relative;
+    top: 300px; */
+    position: absolute;
+    top:55%;
     padding: 55px 0px 0px 0px;
     height: 150px;
     width:110px;
@@ -71,7 +72,8 @@ input[type="text"]{
 }
 .images{
     position: absolute;
-    top:65%;
+    top:55%;
+    /* right: 1%; */
     z-index: 2;
     /* left:-0.5px; */
 }
