--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,11 +3,15 @@
     display: flex;
     justify-content:center
 } */
-th,td,a{
-    display: inline;
-    /* justify-content: center; */
-    /* padding:60px; */
-    color: black;
-    margin:80px;
+
+
+
+
+
+.footerleft{
+    float: left;
+   margin:0%  3% 0% 3%;
+   /* padding: 0% 1% 0% 1%; */
 }
+
 
