--- a/src/css/registerfrom.css
+++ b/src/css/registerfrom.css
@@ -8,14 +8,15 @@
     border-width: 5px;
     border-color: black;
     z-index: 20;
+    transition: 2s;
        
 }
 
-.registerfrom :hover{
-    transition: 2s;
+/* .registerfrom:hover{
+    transition: 5s;
     transform-style:initial;
     transform: scale(2%);
-}
+} */
 
 .h1text{
 color: black;
